text-align fix

--- a/www/style.css
+++ b/www/style.css
@@ -22,6 +22,10 @@ body
 	text-align: center;
 }
 
+.lefted {
+	text-align: left;
+}
+
 a:active
 {
 	color : rgb(255,0,0);
